--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.91.0",
+    "@vercel/analytics": "^1.6.1",
     "chart.js": "^4.4.1",
     "dotenv": "^17.2.3",
     "framer-motion": "^11.18.2",
