--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,19 @@
 # dependencies
+node_modules/
 node_modules
 
 # build output
+dist/
 dist
 dist-ssr
+build/
 build
 .vite
+*.tsbuildinfo
 
 # env
 .env
+.env.*
 .env.local
 .env.production
 .env.*.local
@@ -18,16 +23,21 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
+*.log
+*_output.txt
 
 # OS / editor
 .DS_Store
-.idea
-.vscode
+__MACOSX/
+.idea/
+.vscode/
 *.swp
 
 # System files & backups
-__MACOSX/
 *.zip
 
 # Supabase
 supabase/migrations/_history/
+supabase/.temp/
+supabase/.branches/
+supabase/.cache/
