--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-helmet-async": "^2.0.5",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^6.21.3",
+    "recharts": "^3.7.0",
     "zustand": "^5.0.10"
   },
   "devDependencies": {
