feat(P10): enforce nickname rule via RPC and replace SimpleSignup

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,11 @@
 VITE_SUPABASE_URL=YOUR_SUPABASE_URL
 VITE_SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
 
+# Access Gate (Piloto)
+VITE_ACCESS_GATE_ENABLED=true
+VITE_ACCESS_GATE_DAYS_VALID=30
+
+# Feedback WhatsApp
+VITE_FEEDBACK_WHATSAPP_ENABLED=true
+VITE_FEEDBACK_WHATSAPP_NUMBER=56900000000
+VITE_FEEDBACK_WHATSAPP_TEMPLATE=
