--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "create:admin": "tsx scripts/create_admin_user.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.91.0",
@@ -41,6 +42,7 @@
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "ts-prune": "^0.10.3",
+    "tsx": "^4.21.0",
     "typescript": "^5.2.2",
     "typescript-eslint": "^8.51.0",
     "vite": "^6.4.1"
